# brokerage

./: CLAUDE.md  README.md  docker-compose.yml  manage.py
be/: .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  Dockerfile.dev  Makefile  README.md  asgi.py  check_data.py  conftest.py  docker-compose.dev.yml  manage.py  pyproject.toml  pytest.ini  schema.yml  settings.py  urls.py
be/authentication/: decorators.py  urls.py
be/authentication/services/: __init__.py  jwt_token_service.py
be/authentication/tests/: test_decorators.py  test_jwt_service.py  test_protected_views.py  test_views.py
be/authentication/views/: __init__.py  base_view.py  login_view.py  logout_view.py  protected_view.py  refresh_view.py  register_view.py
be/banking/: models.py  urls.py
be/banking/migrations/: 0001_initial.py
be/banking/models/: __init__.py  bank_account.py  base.py  transaction.py  user_balance.py
be/banking/services/: __init__.py  bank_account_service.py  interfaces.py  validation_service.py
be/banking/tests/: __init__.py
be/banking/tests/models/: test_bank_account.py
be/banking/tests/services/: test_validation_service.py
be/banking/views/: __init__.py  bank_account_views.py  base.py  transaction_views.py  verification_views.py
be/be/: asgi.py  settings.py  urls.py  wsgi.py
be/exchange/: admin.py  apps.py  models.py  routing.py  urls.py
be/exchange/consumers/: __init__.py  market_data_consumer.py
be/exchange/management/commands/: run_exchange_simulator.py
be/exchange/migrations/: 0001_initial.py
be/exchange/models/: __init__.py  base.py  connection.py  market_data.py  order.py
be/exchange/serializers/: __init__.py  market_data_serializer.py
be/exchange/services/: __init__.py  exchange_simulator.py  market_data_service.py  order_service.py  redis_pubsub_service.py
be/exchange/tests/: __init__.py  factories.py
be/exchange/tests/consumers/: __init__.py  test_market_data_consumer.py
be/exchange/tests/models/: __init__.py  test_market_data.py  test_orders.py
be/exchange/tests/services/: __init__.py  test_market_data_service.py
be/exchange/views/: __init__.py  event_views.py  market_data_views.py  order_views.py  status_views.py  subscription_views.py
be/portfolio/: models.py  urls.py
be/portfolio/migrations/: 0001_initial.py
be/portfolio/models/: __init__.py  base.py  performance_metrics.py  portfolio_snapshot.py  position.py
be/portfolio/serializers/: __init__.py  metrics_serializer.py  portfolio_serializer.py  position_serializer.py  snapshot_serializer.py
be/portfolio/services/: __init__.py  market_data_service.py  performance_calculator.py  portfolio_service.py  snapshot_service.py
be/portfolio/tests/: __init__.py  factories.py  test_coverage_summary.py  test_models.py  test_serializers.py  test_services.py  test_views.py
be/portfolio/views/: __init__.py  base.py  metrics_views.py  portfolio_views.py  position_views.py  snapshot_views.py
brokerage/: wsgi.py
design/: banking-operations-flow.mmd  exchange-integration-system.mmd  jwt-authentication-flow.mmd  portfolio-performance-system.mmd
fe/: Dockerfile  README.md  openapi-generator-config.yml  package-lock.json  package.json  test-api.html  test-registration.html
fe/app/: app.css  root.tsx  routes.ts
fe/app/hooks/: useAuth.ts  useExchange.ts
fe/app/lib/: api-client.ts  api-types.ts  auth.ts  websocket-client.ts
fe/app/routes/: banking.tsx  dashboard.tsx  home.tsx  login.tsx  register.tsx  trading.tsx
